25-Nov-2012 Opus.Core.IModule now only lists the required option and proxy path methods/properties. Opus.Core.BaseModule is a new abstract class (implementing IModule) that each module class must now derive from. This allows virtually all of the common methods to be implemented in the base class to simplify the derived module classes. Also, option updates are now performed through a clean interface in user written module instances.

22-Nov-2012 Renamed compiler specific CPlusPlusXYZ classes to CxxXYZ.

22-Nov-2012 Renamed C.ETargetLanguage.CPlusPlus to C.ETargetLanguage.Cxx.

22-Nov-2012 Renamed the namespace C.CPlusPlus to C.Cxx.

22-Nov-2012 C.ICPlusPlusCompilerOptions has been renamed to C.ICxxCompilerOptions.

21-Nov-2012 Exception reporting has been inverted so that the innermost exception is now reported first, alongwith it's callstack. This ensures that the most relevant exception message appears first.

19-Nov-2012 Opus.Core.ITargetFilters no longer accepts a Toolchains keyword attribute, but now a ToolsetTypes System.Type[] keyword attribute. Generally, use typeof(package.Toolset) to fill out this attribute.

16-Nov-2012 CSharp package no longer has a -CSharp.toolchain action. This is due to changes to where the C# compiler is location (now the DotNetFramework package).

15-Nov-2012 CommandLineProcessor.Processor.Execute no longer takes a string for the executable path, since it can be derived from the ITool and the Node's Target.

15-Nov-2012 VisualC 10.0 now checks for both Express and Professional versions for solution builds.

15-Nov-2012 Renamed Opus.Core.IToolRequiredEnvironmentVariables to Opus.Core.IToolForwardedEnvironmentVariables

14-Nov-2012 Removed Opus.Core.AssignOptionCollectionAttribute as it is has been superceded by Toolsets.

14-Nov-2012 Removed Opus.Core.RegisterTargetToolChainAttribute as it has been superceded by Toolsets.

14-Nov-2012 Removed C.ClassNames as it has been superceded by Toolsets and tool interfaces.
